test_scores/negative_dimers/features/P04629.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P04629.pkl.xz